--- a/metadata.yaml
+++ b/metadata.yaml
@@ -42,6 +42,7 @@ subjects:
 - !lcsh 'Medicine -- Early works to 1800'
 - !lcc 'RC'
 - !lcsh 'Sweating-sickness -- Early works to 1800'
+- GITenberg
 title: "The Sweating Sickness\r\nA boke or counseill against the disease commonly\
   \ called the sweate or sweatyng sicknesse"
 url: http://www.gutenberg.org/ebooks/33503
